manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000

      automountServiceAccountToken: false

      containers:
        - name: main
          image: localhost:15000/sensorenregister/frontend:latest
          imagePullPolicy: Always # IfNotPresent
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          resources:
            requests:
              cpu: 0.1
              memory: '64Mi'
            limits:
              cpu: 0.1
              memory: '128Mi'
          volumeMounts:
            - name: log
              mountPath: /var/log/nginx
            - name: run
              mountPath: /var/run
            - name: cache
              mountPath: /var/cache/nginx

          ports:
            - name: http
              containerPort: 8000
          livenessProbe:
            initialDelaySeconds: 1
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
            httpGet:
              path: /
              port: http

      volumes:
        - name: cache
          emptyDir: {}
        - name: log
          emptyDir: {}
        - name: run
          emptyDir: {}
