manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    component: frontend
spec:
  ports:
    - port: 80
      targetPort: http
  selector:
    component: frontend
